Fix CSS property from 'justify-items' to 'justify-content' for proper layout alignment

--- a/chamber/styles/index/index-large.css
+++ b/chamber/styles/index/index-large.css
@@ -16,7 +16,7 @@
         grid-template-areas: "event event"
             "currweather forecast";
         /* align-items: center; */
-        justify-items: space-around;
+        justify-content: space-around;
         /* max-width: 350px; */
         margin: 0 auto;
     }
